<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddEventActivity">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/layoutImage"
                android:layout_width="310dp"
                android:layout_height="310dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp">
                <ImageView
                    android:layout_centerInParent="true"
                    android:id="@+id/IvGambar"
                    android:layout_width="300dp"
                    android:layout_height="300dp"
                    android:src="@drawable/ic_launcher_background"
                    />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/PilihGambar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    android:src="@drawable/abc_vector_test"
                    app:fabSize="normal"

                    />
            </RelativeLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/layoutMain"
                android:layout_below="@id/layoutImage"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="2dp"
                android:layout_margin="20dp"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="16dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width= "match_parent"
                        android:layout_height="wrap_content">
                        <EditText
                            android:id="@+id/EtNama"
                            android:hint="@string/nama"
                            android:fontFamily="sans-serif-light"
                            android:inputType="textPersonName|textCapWords"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width= "match_parent"
                        android:layout_height="wrap_content">
                        <EditText
                            android:id="@+id/EtTanggal"
                            android:hint="@string/tanggal"
                            android:fontFamily="sans-serif-light"
                            android:inputType="date"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width= "match_parent"
                        android:layout_height="wrap_content">
                        <EditText
                            android:id="@+id/reglink"
                            android:hint="Register Link"
                            android:fontFamily="sans-serif-light"
                            android:inputType="textPersonName|textCapWords"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width= "match_parent"
                        android:layout_height="wrap_content">
                        <EditText
                            android:id="@+id/EtTempat"
                            android:hint="@string/tempat"
                            android:fontFamily="sans-serif-light"
                            android:inputType="textPersonName|textCapWords"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardCataegory"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="30dp"
                android:layout_below="@id/layoutMain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="2dp"
                android:layout_margin="20dp"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="16dp">

                    <TextView
                        android:text="@string/kategori"
                        android:textSize="15sp"
                        android:layout_marginLeft="4dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <Spinner
                        android:id="@+id/kategori"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginLeft="-3dp"
                        android:hint="Kategori"
                        android:fontFamily="sans-serif-light"
                        android:inputType="textPersonName" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width= "match_parent"
                        android:layout_height="wrap_content">
                        <EditText
                            android:id="@+id/EtDeskripsi"
                            android:hint="@string/deskripsi"
                            android:fontFamily="sans-serif-light"
                            android:inputType="textMultiLine"
                            android:minLines="5"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                    </com.google.android.material.textfield.TextInputLayout>


                </LinearLayout>


            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/submitEvent"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_below="@id/cardCataegory"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/colorBlue"
                android:text="Add Event"
                android:textColor="#fff" />

            <Button
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:text="back"
                android:textColor="#fff"
                android:id="@+id/btnbck"
                android:backgroundTint="#707070"
                android:layout_below="@id/submitEvent"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="40dp" />
        </RelativeLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>